--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "gatsby-remark-copy-linked-files": "^6.13.0",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^7.13.0",
+    "gatsby-remark-katex": "^7.13.0",
     "gatsby-remark-prismjs": "^7.13.0",
     "gatsby-remark-smartypants": "^6.13.0",
     "gatsby-source-filesystem": "^5.13.0",
     "gatsby-transformer-remark": "^6.13.0",
     "gatsby-transformer-sharp": "^5.13.0",
+    "katex": "^0.16.9",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-katex": "5.0.0",
+    "remark-math": "3.0.1",
     "yarn": "^1.22.21"
   },
   "devDependencies": {
