--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby": "^5.13.0",
     "gatsby-plugin-emotion": "^8.13.0",
     "gatsby-plugin-image": "^3.13.0",
+    "gatsby-plugin-netlify-cms": "^7.12.1",
     "gatsby-plugin-sharp": "^5.13.0",
     "gatsby-plugin-typescript": "^5.13.0",
     "gatsby-remark-copy-linked-files": "^6.13.0",
@@ -22,6 +23,7 @@
     "gatsby-transformer-remark": "^6.13.0",
     "gatsby-transformer-sharp": "^5.13.0",
     "katex": "^0.16.9",
+    "netlify-cms-app": "^2.15.72",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
